CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (rectanglebinpack)

SET (T3RD_CODE_PATH_RECTANGLEBINPACK ${T3RD_CODE_PATH}/rectanglebinpack)

SET (DEPEND_PROJ_LIST
    )

SET (INCLUDE_PATH_LIST ${T3RD_CODE_PATH_RECTANGLEBINPACK})
SET (LINK_PATH_LIST
    ${OUT_PATH}/lib
    )

SET (LIBRARY_FILE_LIST
    )

SET (CODE_FILE_LIST_RECTANGLEBINPACK
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/Rect.h
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/Rect.cpp
    ${T3RD_CODE_PATH_RECTANGLEBINPACK}/GuillotineBinPack.h
    ${T3RD_CODE_PATH_RECTANGLEBINPACK}/GuillotineBinPack.cpp
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/MaxRectsBinPack.h
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/MaxRectsBinPack.cpp
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/ShelfBinPack.h
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/ShelfBinPack.cpp
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/ShelfNextFitBinPack.h
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/ShelfNextFitBinPack.cpp
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/SkylineBinPack.h
	${T3RD_CODE_PATH_RECTANGLEBINPACK}/SkylineBinPack.cpp
    )

SET (CODE_FILE_LIST_RES
    ${T3RD_CODE_PATH_RECTANGLEBINPACK}/RectangleBinPack.pdf
    ${T3RD_CODE_PATH_RECTANGLEBINPACK}/Readme.txt
    )

SOURCE_GROUP ("rectanglebinpack" FILES ${CODE_FILE_LIST_RECTANGLEBINPACK})
SOURCE_GROUP ("res" FILES ${CODE_FILE_LIST_RES})

SET (LIBRARY_OUTPUT_PATH ${OUT_PATH}/lib)
SET (EXECUTABLE_OUTPUT_PATH ${OUT_PATH}/bin)

INCLUDE_DIRECTORIES (${INCLUDE_PATH_LIST})
LINK_DIRECTORIES (${LINK_PATH_LIST})
#LINK_LIBRARIES (${LIBRARY_FILE_LIST}

#ADD_DEFINITIONS ("-DC4G_EXPORTS_API")
#ADD_DEPENDENCIES (rectanglebinpack ${DEPEND_PROJ_LIST})

ADD_LIBRARY (rectanglebinpack STATIC ${CODE_FILE_LIST_RECTANGLEBINPACK}
                                    ${CODE_FILE_LIST_RES}
                                    )
