CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (supereasyjson)

SET (T3RD_CODE_PATH_SUPEREASYJSON ${T3RD_CODE_PATH}/supereasyjson)

SET (DEPEND_PROJ_LIST
    )

SET (INCLUDE_PATH_LIST ${T3RD_CODE_PATH_SUPEREASYJSON})
SET (LINK_PATH_LIST
    ${OUT_PATH}/lib
    )

SET (LIBRARY_FILE_LIST
    )

SET (CODE_FILE_LIST_JSON
    ${T3RD_CODE_PATH_SUPEREASYJSON}/json.h
    ${T3RD_CODE_PATH_SUPEREASYJSON}/json.cpp
    )

SET (CODE_FILE_LIST_RES
    ${T3RD_CODE_PATH_SUPEREASYJSON}/LICENSE
    ${T3RD_CODE_PATH_SUPEREASYJSON}/README.txt
    )

SOURCE_GROUP ("json" FILES ${CODE_FILE_LIST_JSON})
SOURCE_GROUP ("res" FILES ${CODE_FILE_LIST_RES})

SET (LIBRARY_OUTPUT_PATH ${OUT_PATH}/lib)
SET (EXECUTABLE_OUTPUT_PATH ${OUT_PATH}/bin)

INCLUDE_DIRECTORIES (${INCLUDE_PATH_LIST})
LINK_DIRECTORIES (${LINK_PATH_LIST})
#LINK_LIBRARIES (${LIBRARY_FILE_LIST}

#ADD_DEFINITIONS ("-DC4G_EXPORTS_API")
#ADD_DEPENDENCIES (supereasyjson ${DEPEND_PROJ_LIST})

ADD_LIBRARY (supereasyjson STATIC ${CODE_FILE_LIST_JSON}
                         ${CODE_FILE_LIST_RES}
                                 )
