CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (t001)

SET (TEST_CODE_PATH_T001 ${TEST_CODE_PATH}/t001)

SET (DEPEND_PROJ_LIST
    yam
    supereasyjson
    rectanglebinpack
    )

SET (INCLUDE_PATH_LIST
    ${CODE_PATH}/yam/inc
    ${CODE_PATH}/t3rd/supereasyjson
    ${CODE_PATH}/t3rd/rectanglebinpack
    ${TEST_CODE_PATH_T001}
    )

SET (LINK_PATH_LIST
    ${OUT_PATH}/lib
    )

if(CMAKE_COMPILER_IS_GNUCXX)
SET (LIBRARY_FILE_LIST
    yam.a
    supereasyjson.a
    rectanglebinpack.a
    )
ELSE (CMAKE_COMPILER_IS_GNUCXX)
SET (LIBRARY_FILE_LIST
    yam.lib
    supereasyjson.lib
    rectanglebinpack.lib
    )
ENDIF ()

SET (CODE_FILE_LIST_T001
    ${TEST_CODE_PATH_T001}/t001.cpp
    )

SOURCE_GROUP ("t001" FILES ${CODE_FILE_LIST_T001})

SET (LIBRARY_OUTPUT_PATH ${OUT_PATH}/lib)
SET (EXECUTABLE_OUTPUT_PATH ${OUT_PATH}/bin)

INCLUDE_DIRECTORIES (${INCLUDE_PATH_LIST})
LINK_DIRECTORIES (${LINK_PATH_LIST})
LINK_LIBRARIES (${LIBRARY_FILE_LIST})

#ADD_DEFINITIONS ("-DC4G_EXPORTS_API")

ADD_EXECUTABLE (t001 ${CODE_FILE_LIST_T001})

ADD_DEPENDENCIES (t001 ${DEPEND_PROJ_LIST})
